Use a properly tested math lib to handle floats
JavaScript does a bad job handling floating points. I was seeing
some rounding errors so let's use a well tested math lib to be
safe.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "lodash": "^4.13.1",
+    "mathjs": "^3.2.1",
     "request-promise": "^3.0.0"
   },
   "engine": "node 6.4.0"
